--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fs-app-template",
+  "name": "bon-voyage",
   "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "Travel Searching App",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -17,18 +17,22 @@
     "test:dev:models": "npm run test:dev -- --grep=model",
     "test:dev:routes": "npm run test:dev -- --grep=route"
   },
-  "author": "Fullstack Academy of Code",
+  "author": "Bi-Coastal-Visualizers",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "bulma": "^0.9.3",
+    "chart.js": "^3.4.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.6.2",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
