--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.6.2",
     "pg": "^8.5.1",
+    "react-chartjs-2": "^3.0.3",
     "sequelize": "^6.3.5",
     "styled-components": "^5.3.0"
   },
