--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bulma": "^0.9.3",
     "chart.js": "^3.4.0",
     "compression": "^1.7.3",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
