--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "compression": "^1.7.3",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
+    "fuse.js": "^6.4.6",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
