--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "^6.6.2",
     "pg": "^8.5.1",
     "react-chartjs-2": "^3.0.3",
+    "react-simple-maps": "^2.3.0",
     "sequelize": "^6.3.5",
     "styled-components": "^5.3.0"
   },
